--- a/roles/common/tasks/main.yaml
+++ b/roles/common/tasks/main.yaml
@@ -12,6 +12,9 @@
   - git
   - python-pip
   - python-dev 
+  - libjpeg-dev 
+  - zlib1g-dev 
+  - libpng12-dev
   - sudo
   when: ansible_pkg_mgr == "yum"
 
@@ -21,5 +24,8 @@
   - git
   - python-pip
   - python-dev 
+  - libjpeg-dev 
+  - zlib1g-dev 
+  - libpng12-dev
   - sudo
   when: ansible_pkg_mgr == "apt"
